// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands formatCommandsForPrompt should handle command names that include a query fragment 1`] = `
"- name: vault?tools=list,rename
  description: |-
    An agent performs vault-related operations. You MUST add a query to activate one or more tools that needs to perform the operation, e.g. 'vault?tools=list,rename'.
    Available tools: list, rename, create, delete, copy, and move.
  use_when: Vault operations (list files, create notes, etc.)
"
`;

exports[`commands formatCommandsForPrompt should merge multiple commands referencing the same agent by tools 1`] = `
"- name: vault?tools=list,rename,copy
  description: |-
    An agent performs vault-related operations. You MUST add a query to activate one or more tools that needs to perform the operation, e.g. 'vault?tools=list,rename'.
    Available tools: list, rename, create, delete, copy, and move.
  use_when: Vault operations (list files, create notes, etc.)
"
`;
